[gd_scene load_steps=11 format=2]

[ext_resource path="res://montserrat/Montserrat-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Artwork/Bible.png" type="Texture" id=2]
[ext_resource path="res://Code/Church/Bible.gd" type="Script" id=3]
[ext_resource path="res://Artwork/exit.png" type="Texture" id=4]
[ext_resource path="res://montserrat/Montserrat-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxLine" id=6]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.643137, 0.619608, 0.619608, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=4]
size = 26
outline_color = Color( 0.933333, 0.0823529, 0.0823529, 1 )
font_data = ExtResource( 5 )

[node name="Bible" type="Sprite"]
position = Vector2( 431.12, 358.161 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="BibleText" type="TextEdit" parent="."]
margin_left = -273.394
margin_top = -215.303
margin_right = -37.394
margin_bottom = 124.697
grow_vertical = 2
mouse_default_cursor_shape = 3
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/caret_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/background_color = Color( 0.882353, 0.878431, 0.878431, 1 )
text = "This is where text goes"
syntax_highlighting = true
wrap_enabled = true
caret_block_mode = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BibleExit" type="ToolButton" parent="."]
margin_left = 277.96
margin_top = -236.385
margin_right = 322.96
margin_bottom = -193.385
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="ToolButton" parent="."]
margin_left = -241.537
margin_top = 126.517
margin_right = -75.5375
margin_bottom = 159.517
custom_styles/hover = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.403922, 0.388235, 0.388235, 1 )
text = "Save Text"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BibleExit" to="." method="_on_BibleExit_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
